@@ -82,7 +82,7 @@ abstract class LineManipulatorDragHandler extends SimSharingDragHandler {
         }
     }
 
-    // Drag handler for slope manipulator
+    // Drag handler for run manipulator
     public static class SlopeDragHandler extends LineManipulatorDragHandler {
 
         private final Property<DoubleRange> riseRange, runRange;
@@ -111,6 +111,17 @@ abstract class LineManipulatorDragHandler extends SimSharingDragHandler {
             double rise = MathUtil.clamp( mvt.viewToModelDeltaY( pMouse.getY() - clickYOffset ) - line.get().intercept, riseRange.get() );
             line.set( new SlopeInterceptLine( rise, run, line.get().intercept, LGColors.INTERACTIVE_LINE ) );
         }
-    }
 
+        // Don't allow slope and intercept to overlap, snap rise towards the origin (above or below intercept)
+        @Override protected void endDrag( PInputEvent event ) {
+            super.endDrag( event );
+            if ( line.get().rise == 0 && line.get().run == 0 ) {
+                double newRise = line.get().rise - 1;
+                if ( line.get().intercept < 0 ) {
+                    newRise = line.get().rise + 1;
+                }
+                line.set( new SlopeInterceptLine( newRise, line.get().run, line.get().intercept, LGColors.INTERACTIVE_LINE ) );
+            }
+        }
+    }
 }
